fix word-wrap

--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -103,6 +103,11 @@ a:hover {
     text-align: left;
     word-wrap: break-word;
   }
+  .row2 {
+    padding: 20px;
+    text-align: left;
+    word-wrap: break-word;
+  }
 }
 input[type="submit"].btn-block{
   margin: 15px 0;
